--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/brewy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Browse brew recepies and make your own. Keep track of all your brews and give them a rating. Data is king to make the perfect brew."
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="brewy.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Brewy - Keep track of your brewing</title>
   </head>
